@startuml

title __COMPARE's Class Diagram__\n

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class BoolComp {
          + compare()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class CompareService {
          - sigma : double
          ~ file : File
          + compareOneOnOne()
          + doCompareSAP()
          + getAbsolute()
          + resultForTable()
          + compareEntities()
          + findTheMostLikely()
          + compareAttribute()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class Comparer {
          ~ Comparer()
          + compare()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      interface ComparerInterface {
          {abstract} + compare()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class DateComp {
          ~ DateComp()
          - convertDate()
          - gausCompareTwoValues()
          + compare()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class DoubleComp {
          ~ DoubleComp()
          - ObjecttoDouble()
          + compare()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class InsuranceNumberComp {
          ~ InsuranceNumberComp()
          + compare()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class IntegerComp {
          - intToArrayList()
          - stringToArrayList()
          - longToArrayList()
          - compareLength()
          + compare()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class Sigma {
          {static} + Bool : double
          {static} + Inte : double
          {static} + Intelength : double
          {static} + Str : double
          {static} + Doub : double
          {static} + Monate : double
          {static} + Tage : double
          {static} + strl_ : double
          {static} + strd_ : double
          {static} + stro_ : double
          + Strcmp2 : String
          + wert : double
          + tagewert : double
          + monatewert : double
          + strl : double
          + strd : double
          + stro : double
          + typeconv()
          + getStrcmp2()
          + setStrcmp2()
          + getStro()
          + setStro()
          + getStrd()
          + setStrd()
          + getStrl()
          + setStrl()
          + getWert()
          + setWert()
          + getTagewert()
          + setTagewert()
          + getMonatewert()
          + setMonatewert()
          + setSigmaBool()
          + setSigmaInte()
          + setSigmaIntelength()
          + setSigmaStr()
          + setSigmaDoub()
          + setSigmaMonate()
          + setSigmaTage()
          + setSigmastro_()
          + setSigmastrl_()
          + setSigmastrd_()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class StringComp {
          + StringComp()
          + calculate()
          + calculate_DL()
          - min()
          + costOfSubstitution()
          - StringToLong()
          - StringToHashMap()
          - findCharInStringRight()
          - findCharInStringLeft()
          - getTranspositions()
          - getDistribution()
          - hammingDistance()
          - compareLength()
          - compareContent()
          - compareDistribution()
          - compareOrder()
          + compare()
      }
    }
  }
  

  BoolComp -up-|> ComparerInterface
  CompareService o-- IntegerComp : intCompare
  CompareService o-- DateComp : dateCompare
  CompareService o-- DoubleComp : doubleCompare
  CompareService o-- InsuranceNumberComp : insuranceNumberComp
  CompareService o-- StringComp : stringCompare
  CompareService o-- BoolComp : boolComp
  CompareService o-- Comparer : comp
  Comparer -up-|> ComparerInterface
  Comparer o-- IntegerComp : intComp
  Comparer o-- DoubleComp : doubleComp
  Comparer o-- DateComp : dateComp
  Comparer o-- StringComp : stringComp
  Comparer o-- BoolComp : boolComp
  DateComp -up-|> ComparerInterface
  DateComp o-- IntegerComp : integerComp
  DoubleComp -up-|> ComparerInterface
  DoubleComp o-- IntegerComp : integerComp
  InsuranceNumberComp -up-|> ComparerInterface
  InsuranceNumberComp o-- IntegerComp : integerComp
  InsuranceNumberComp o-- DateComp : dateComp
  IntegerComp -up-|> ComparerInterface
  StringComp -up-|> ComparerInterface
  StringComp o-- IntegerComp : integerComp
  StringComp o-- InsuranceNumberComp : insuranceNumberComp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
